# gydlp

./: meson.build
data/: com.github.GokhanOfficial.Gydlp.appdata.xml.in  com.github.GokhanOfficial.Gydlp.desktop.in  meson.build
src/: gydlp.py
